[package]
name = "dsl_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dsl_code_generation = {path = "../dsl_code_generation"}
dsl_llvm = { path="../dsl_llvm" }
dsl_util = { path="../dsl_util" }
dsl_parser = { path="../dsl_parser" }
dsl_lexer = { path="../dsl_lexer" }
dsl_symbol = { path="../dsl_symbol" }
llvm-sys = {path="../llvm-sys"}
colored = "2"
rt-format = "0.3.1"