[package]
name = "dsl_lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsl_util = {path = "../dsl_util"}
dsl_macros = {path="../dsl_macros"}
dsl_trie = {path="../dsl_trie"}
dsl_errors = {path="../dsl_errors"}
lazy_static = "1.4.0"
colored = "2"