[package]
name = "dsl_llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
llvm-sys = {path="../llvm-sys"}
dsl_symbol = {path = "../dsl_symbol"}
dsl_errors = {path = "../dsl_errors"}
dsl_util = {path = "../dsl_util"}