[package]
name = "dsl_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsl_lexer = {path = "../dsl_lexer"}
dsl_errors = {path = "../dsl_errors"}
dsl_symbol = {path="../dsl_symbol"}
colored = "2"