[package]
name = "dsl_symbol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsl_util = {path = "../dsl_util"}
dsl_lexer = {path = "../dsl_lexer"}
dsl_errors = {path = "../dsl_errors"}
llvm-sys = {path = "../llvm-sys"}
linked-hash-map = "0.5.4"