[package]
name = "llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
# llvm-sys = {version="130.0.3"}
# rustc_llvm = {path = "../rustc_llvm"}

[build-dependencies]
cc = "1.0.73"