[package]
name = "ts_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ts_evaluator = { path="../ts_evaluator" }
ts_util = { path="../ts_util" }
ts_parser = { path="../ts_parser" }
ts_lexer = { path="../ts_lexer" }
ts_symbol = { path="../ts_symbol" }
colored = "2"
rt-format = "0.3.1"