[package]
name = "ts_lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ts_util = {path = "../ts_util"}
ts_macros = {path="../ts_macros"}
ts_trie = {path="../ts_trie"}
ts_errors = {path="../ts_errors"}
lazy_static = "1.4.0"
colored = "2"
rt-format = "0.3.1"