[package]
name = "ts_symbol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ts_util = {path = "../ts_util"}
ts_lexer = {path = "../ts_lexer"}
ts_errors = {path = "../ts_errors"}
linked-hash-map = "0.5.4"
bitflags = "1.3.2"